Source/WebCore/rendering/LayerOverlapMap.h
@@ -53,8 +53,8 @@ public:
     bool overlapsLayers(const RenderLayer&, const LayoutRect&, const Vector<LayerAndBounds>& enclosingClippingLayers) const;
     bool isEmpty() const { return m_isEmpty; }
 
-    void pushCompositingContainer();
-    void popCompositingContainer();
+    void pushCompositingContainer(const RenderLayer&);
+    void popCompositingContainer(const RenderLayer&);
 
     const RenderGeometryMap& geometryMap() const { return m_geometryMap; }
     RenderGeometryMap& geometryMap() { return m_geometryMap; }
